Update and rename instagram_login.html to index.html

--- a/PROJECT_INSTAGRAM/index.html
+++ b/PROJECT_INSTAGRAM/index.html
@@ -4,10 +4,10 @@
     <link rel="stylesheet" href="insta_login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="j-_3N-5ief-eRnD-B9CG-eCSu3-20ppEhLvfUTICn20" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
     <link rel="icon" href="images.jpeg">
-    <!-- <link rel="icon" href="iconista.jpg"> -->
 </head>
 
 <body>
