--- a/PROJECT_INSTAGRAM/firstpage.html
+++ b/PROJECT_INSTAGRAM/firstpage.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="Front_page.css">
     <meta name="google-site-verification" content="j-_3N-5ief-eRnD-B9CG-eCSu3-20ppEhLvfUTICn20" />
-    <link rel="icon" href="images.jpeg">
+    <link rel="icon" href="images/website icon.jpg">
+
 </head>
 <body>
     
