--- a/PROJECT_INSTAGRAM/index.html
+++ b/PROJECT_INSTAGRAM/index.html
@@ -7,7 +7,8 @@
     <meta name="google-site-verification" content="j-_3N-5ief-eRnD-B9CG-eCSu3-20ppEhLvfUTICn20" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
-    <link rel="icon" href="images.jpeg">
+  <link rel="icon" href="images/website icon.jpg">
+
 </head>
 
 <body>
