--- a/PROJECT_INSTAGRAM/firstpage.html
+++ b/PROJECT_INSTAGRAM/firstpage.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="Front_page.css">
     <meta name="google-site-verification" content="j-_3N-5ief-eRnD-B9CG-eCSu3-20ppEhLvfUTICn20" />
     <link rel="icon" href="images/website icon.jpg">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     
