--- a/PROJECT_INSTAGRAM/firstpage.html
+++ b/PROJECT_INSTAGRAM/firstpage.html
@@ -93,11 +93,11 @@
                         </a>
                         <a href="">
                             <img src="images\Boomi_edit.jpg" alt="" class="stroy-image">
-                            <p>I'm_Boomi</p>
+                            <p>_.boomika._sri</p>
                         </a>
                         <a href="">
                             <img src="images\krisha_edit.jpg" alt="" class="stroy-image"> 
-                            <p>Krisha_08_04</p>
+                            <p>._krishhha._</p>
                         </a>
                         <a href="">
                             <img src="images\Mathi_edit.jpg" alt="" class="stroy-image">
@@ -105,7 +105,7 @@
                         </a>
                         <a href="">
                             <img src="images\Santhosh_edit.jpg" alt="" class="stroy-image">
-                            <p>its_santhosh</p>
+                            <p>__sxnto.__</p>
                         </a>
                         <a href="">
                             <img src="images\pothi_edit.jpg" alt="" class="stroy-image" id="sidenav_ab">
@@ -329,7 +329,7 @@
                     display: inline-block;">
 
                 <span class="img-name">
-                        I'm_Boomi
+                        _.boomika._sri
                         <img src="images\bluetick.jpg" alt="" width="15px" height="15px" style="position: relative;top:3px">
                         &bull;13h
                         <br> 
